--- a/continuation.html
+++ b/continuation.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header4-3j" style="background-image: url(assets/images/black-and-white-rose-1280x1024-2000x1600.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header4-3j" style="background-image: url(assets/images/black-and-white-rose-1280x1024-2000x1600.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);"></div>
 
@@ -99,7 +99,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="rxS0EanjVV0IYk7t+AtDMidswP+NiHsm7QrXnlZSNn6j1rvTV7+3pSxDcKQsvZ7KD2+YLmkAcoQLSjvxA70H0XbGBB4bfV+pXNy+XCQmtTsWNBYG4O79dep68ycjiE3o" data-form-email="true">
+                    <input type="hidden" value="CSzr4XJtQfqTcB1FCgldcIIX8vt/Bfwk8JPZM2ZPiulRjQI6SO+qPZ1EpSfZkMD4fZM1KcioQcdcCIzmJYze8itXyvAzy6W58TsYSDMCIOgyWleyNMZYm2js45mkmiIr" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-4m-email">Email<span class="form-asterisk">*</span></label>
